--- a/foo.css
+++ b/foo.css
@@ -22,13 +22,14 @@ table {
 td{
 	font-size: 35px;
 	font-weight: 300;
+	font-family: "Noto Naskh Arabic";
 }
 th {
 	padding:8px 20px;
 	font-weight: 500;
 }
 th, td {
-  	padding: 8px 12px;
+  	padding: 4px 12px;
 	text-align: center;
 	vertical-align: middle;
 }
@@ -41,7 +42,7 @@ tr:nth-of-type(odd) {
 	color: #fff;
   }
 .first_column{
-	background-color:  #A2D2FF;
+	background-color:  #ddeeff;
 }
 
 
