--- a/foo.css
+++ b/foo.css
@@ -19,6 +19,18 @@ form {
 	text-align: center;
     
 }
+.wordListForm{
+	width: 500px;
+	height: 750px;
+	border: 2px solid black;
+	margin: 20px 50px;
+
+	/* box-shadow: 0 0 20px rgba(0, 0, 0, 0.15); */
+    border-radius: 10px;
+	padding: 15px;
+	text-align: center;
+    
+}
 #formsContainer{
 	display: flex;
 	flex-direction: column;
@@ -46,7 +58,9 @@ td{
 }
 th {
 	padding:8px 20px;
-	font-weight: 500;
+	font-weight: 400;
+	font-size: 35px;
+
 }
 th, td {
   	padding: 3px 12px;
